# epi-structure

./: .gitignore  .markdownlint.json  DESIGN.md  LICENSE  README.md  cspell-project-words.txt  cspell.json  pyproject.toml  thread.md
.github/: copilot-instructions.md
.github/agents/: Design.agent.md
notebooks/: 01_sir.ipynb  02_seir.ipynb  03_seirs.ipynb  04_seird.ipynb  04_two_population.ipynb  05_interventions.ipynb  05_superspreader_party_crawl.ipynb  05_two_population.ipynb  06_rt_wells_riley_decomposition.ipynb  06_superspreader_party_crawl.ipynb  07_interventions.ipynb  07_rt_wells_riley_decomposition.ipynb  08_interventions.ipynb  08_timed_interventions.ipynb  09_timed_interventions.ipynb  README.md  contact_matrix_exploration.ipynb  exploration.ipynb
src/epi_structure/: __init__.py  contact_matrix.py  interventions.py  model.py  notebook_helpers.py  parameters.py  scenarios.py
tests/: test_seird_regression.py
